Add music and video

--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
         <li><a title="Accesorios" href="/html/accesorios.html">Accesorios</a></li>
     </ul>
     <hr>
-    <img width="20%" src="/img/cat_popping.png" alt="Gato poposeando">
+    <audio src="/audio/mac_miller_buttons.mp3" controls autoplay></audio>
+    <figure>
+        <video src="/video/moon.mp4" width="50%" autoplay loop controls muted></video>
+    </figure>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error beatae maxime fugit provident quae quo necessitatibus vero facilis voluptatum commodi. Ipsa debitis repellendus accusantium autem odio porro praesentium, quia architecto?</p>
+    <figure>
+        <img width="20%" src="/img/cat_popping.png" alt="Gato poposeando" border="2px">
+        <figcaption><em>Gato poposeando</em></figcaption>
+    </figure>
     <hr>
     <email><em>erebos.businesss@gmail.com</em></email>
 </body>
