Change github path

--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erebos</title>
-    <link rel="Page Icon" href="/img/moon_icon.png" type="image/x-icon">
+    <link rel="Page Icon" href="img/moon_icon.png" type="image/x-icon">
 </head>
 <body>
     <h1>Bievenido a Erebos</h1>
     <hr>
     <h2>Menú Principal</h2>
     <ul>
-        <li><a title="Camisas" href="/html/camisas.html">Camisas</a></li>
-        <li><a title="Gorras" href="/html/gorras.html">Gorras</a></li>
-        <li><a title="Accesorios" href="/html/accesorios.html">Accesorios</a></li>
+        <li><a title="Camisas" href="html/camisas.html">Camisas</a></li>
+        <li><a title="Gorras" href="html/gorras.html">Gorras</a></li>
+        <li><a title="Accesorios" href="html/accesorios.html">Accesorios</a></li>
     </ul>
     <hr>
-    <audio src="/audio/mac_miller_buttons.mp3" controls autoplay></audio>
+    <audio src="audio/mac_miller_buttons.mp3" controls autoplay></audio>
     <figure>
-        <video src="/video/moon.mp4" width="50%" autoplay loop controls muted></video>
+        <video src="video/moon.mp4" width="50%" autoplay loop controls muted></video>
     </figure>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error beatae maxime fugit provident quae quo necessitatibus vero facilis voluptatum commodi. Ipsa debitis repellendus accusantium autem odio porro praesentium, quia architecto?</p>
     <figure>
-        <img width="20%" src="/img/cat_popping.png" alt="Gato poposeando" border="2px">
+        <img width="20%" src="img/cat_popping.png" alt="Gato poposeando" border="2px">
         <figcaption><em>Gato poposeando</em></figcaption>
     </figure>
     <hr>
