--- a/html/gorras.html
+++ b/html/gorras.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camisas</title>
-    <link href="/img/moon_icon.png" rel="Page Icon" type="image/x-icon">
+    <link href="img/moon_icon.png" rel="Page Icon" type="image/x-icon">
 </head>
 <body>
     <h1>Gorras</h1>
-    <h3><a href="/index.html">Volver</a></h3>
+    <h3><a href="../index.html">Volver</a></h3>
 </body>
 </html>
